# Simulation-Biome-Calculator

./: README.md
calculator/java/: .gitignore
calculator/java/net.plantabyte.biomes/: module-info.java
calculator/java/net.plantabyte.biomes.test/: module-info.java
calculator/java/net.plantabyte.biomes.test/net/plantabyte/biomes/test/: PortHelper.java  Tests.java
calculator/java/net.plantabyte.biomes/net/plantabyte/biomes/: Biome.java  BiomeCalculator.java  package-info.java
calculator/python/: README.md  setup.py  test-gen-script.txt
calculator/python/biomecalculator/: __init__.py  biomes.py
calculator/python/biomecalculator/impls/: classifier_cython.pyx  classifier_python.py
calculator/python/plantabyte/biomecalculator/: __init__.py  classifier.pyx  classifier_cython.pyx
calculator/rust/: .gitignore  Cargo.toml  README.md
calculator/rust/src/: lib.rs
calculator/rust/tests/: integration_test.rs
research/: .gitignore  Biome-Notes.md  FAO-land-cover-types.md  IGBP-land-cover-types.md  NASA-biomes.md  Seamap-Australia.md  make_venv.PS1  make_venv.sh  requirements.txt
research/src/: biome_classifier_model.pyx  biome_enum.py  biome_model.py  datadownload.py  exporter.py  hillclimb.py  landcover_codes.py  model_building.py  model_exploration.py  model_testing.py  photophysiology.py  preprocess.py  setup.py
