[package]
name = "biomecalculator"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# macros for unit-testing workaround for lack of Rust support for enums of const values
variant_count = "1.1"
ordered-float="3.0"
# optional deps
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
flate2 = "1.0"

